[metadata]
name = nionswift-usim
version = 0.3.0
# requires nionswift-instrumentation 0.20 (standard test context)
author = Nion Software
author_email = swift@nion.com
description = A Nion Swift package to simulate a STEM microscope, scanner, and cameras.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-usim
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.7
install_requires =
    nionswift-instrumentation>=0.19.0
tests_require =
    nionswift>=0.15.0,<0.16.0
    nionswift-usim

[options.package_data]
nionswift_plugin.usim =
    manifest.json

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.usim
    nionswift_plugin.usim.test
