[metadata]
name = nionswift-usim
version = 0.4.0
author = Nion Software
author_email = swift@nion.com
description = A Nion Swift package to simulate a STEM microscope, scanner, and cameras.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-usim
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
python_requires = ~=3.8
install_requires =
    nionswift-instrumentation>=0.20.0,<0.21.0
tests_require =
    nionswift>=0.16.0,<0.17.0

[options.package_data]
nionswift_plugin.usim =
    manifest.json

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.usim
    nionswift_plugin.usim.test
