[metadata]
name = nionswift-usim
version = 5.4.2
author = Nion Software
author_email = swift@nion.com
description = A Nion Swift package to simulate a STEM microscope, scanner, and cameras.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-usim
license = GPL-3.0-only
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
   nionswift-instrumentation >=23.3,<24.0

[options.package_data]
nionswift_plugin.usim =
    manifest.json

[options.packages.find]
include =
    nion.usim_device
    nionswift_plugin
    nionswift_plugin.usim
    nionswift_plugin.usim.test
